Added clock component with testing parameters. Customized with updated styles

--- a/app/css/base/_variables.scss
+++ b/app/css/base/_variables.scss
@@ -8,3 +8,8 @@ $lightCoyote: #806A42;
 $nav-background: $olive;
 $nav-text-color: $coyote;
 $nav-link-color: $lightCoyote;
+
+//Clock Colors
+$clock-text-color: white;
+$clock-bg-color: #8B9476;
+$clock-border-color: #475940;
