updated components to handle on click events and styling

--- a/app/css/style.scss
+++ b/app/css/style.scss
@@ -1,6 +1,8 @@
 @import "base/variables";
 @import "components/nav";
 @import "components/clock";
+@import "components/controls";
+
 $space-large: 2.5rem;
 $title-color: #192231;
 
